--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Initialize
         working-directory: example-application
         run: |
-          apt update && apt install --no-install-recommends --yes curl
+          apt update && apt install --no-install-recommends --yes curl jq fd
           west init -l .
           west update
 
