--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Initialize
         working-directory: example-application
         run: |
-          apt update && apt install --no-install-recommends --yes curl jq fd-find
+          apt update && apt install --no-install-recommends --yes curl jq
           west init -l .
           west update
 
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: |
-          jq -s 'add' $(fd compile_commands.json twister-out/native_posix/) > compile_commands.json
+          jq -s 'add' $(find twister-out/native_posix -name compile_commands.json) > compile_commands.json 
           
           sonar-scanner \
             --define project.settings=example-application.git/sonar-project.properties \
