--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=aunsbjerg_example-application
 sonar.organization=aunsbjerg
-sonar.projectName=example-application
-sonar.projectVersion=1.0
+# sonar.projectName=example-application
+# sonar.projectVersion=1.0
 sonar.sources=\
     example-application.git/app, \
     example-application.git/drivers, \
@@ -12,9 +12,9 @@ sonar.sourceEncoding=UTF-8
 sonar.cfamily.compile-commands=compile_commands.json
 sonar.coverageReportPaths=twister-out/coverage/coverage.sonarqube.xml
 sonar.coverage.exclusions=\
-    bootloader/,\
-    build*/,\
-    modules,\
-    tools/,\
-    twister-out*/,\
-    zephyr/
+    example-application.git/bootloader/,\
+    example-application.git/build*/,\
+    example-application.git/modules,\
+    example-application.git/tools/,\
+    example-application.git/twister-out*/,\
+    example-application.git/zephyr/
