--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=aunsbjerg_example-application
 sonar.organization=aunsbjerg
-# sonar.projectName=example-application
-# sonar.projectVersion=1.0
+sonar.projectName=example-application
+sonar.projectVersion=1.0
+sonar.host.url=https://sonarcloud.io
 sonar.sources=\
     example-application.git/app, \
     example-application.git/drivers, \
