fixup! wip: build pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,9 +13,9 @@ sonar.sourceEncoding=UTF-8
 sonar.cfamily.compile-commands=compile_commands.json
 sonar.coverageReportPaths=twister-out/coverage/coverage.sonarqube.xml
 sonar.coverage.exclusions=\
-    example-application.git/bootloader/,\
-    example-application.git/build*/,\
-    example-application.git/modules,\
-    example-application.git/tools/,\
-    example-application.git/twister-out*/,\
-    example-application.git/zephyr/
+    bootloader/,\
+    build*/,\
+    modules,\
+    tools/,\
+    twister-out*/,\
+    zephyr/
