--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,11 +4,11 @@ sonar.projectName=example-application
 sonar.projectVersion=1.0
 sonar.host.url=https://sonarcloud.io
 sonar.sources=\
-    example-application.git/app, \
-    example-application.git/drivers, \
-    example-application.git/include, \
-    example-application.git/lib
-sonar.tests=example-application.git/tests/
+    example-application/app, \
+    example-application/drivers, \
+    example-application/include, \
+    example-application/lib
+sonar.tests=example-application/tests/
 sonar.sourceEncoding=UTF-8
 sonar.cfamily.compile-commands=compile_commands.json
 sonar.coverageReportPaths=twister-out/coverage/coverage.sonarqube.xml
